@@ -34,7 +34,6 @@
 	  <child>
 	    <widget class="GtkButton" id="helpbutton1">
 	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-help</property>
 	      <property name="use_stock">True</property>
